--- a/framework/major/src/main/resources/static/index.html
+++ b/framework/major/src/main/resources/static/index.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>project</title>
+    <title>Document</title>
 </head>
 <body>
-    <div>
-        
-    </div>
+    <h1>hello muzamil</h1>
 </body>
 </html>
